# Prometheus

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AUDIT_REPORT_2026-04-13.md  Bismuth_APCP.prop.json  Bismuth_APCP_Optimisation.prop-opt.json  CLAUDE.md  KNSB.prop  KNSB.prop.json  Larry.prop  Larry_Prometheus.txt  Larry_Propep.txt  README.md  RP1-LOX.prop.json  benchmark_gradient.py  compare_solvers.py  demonstration.ipynb  diagnose_optimizer.py  optimisation_test_1.json  profile_gui_solve.prof  profile_gui_solve.py  pyproject.toml
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  python-publish-testpypi.yml  python-publish.yml
docs/: conf.py  frozen_expansion.rst  gui_optimizer_integration_spec.md  index.rst  optimizer.rst  optuna_optimizer_plan.md  requirements.txt  solver_comparison.rst  worked_example_ch4_o2.rst
docs/api/: prometheus.core.constants.rst  prometheus.core.rst  prometheus.equilibrium.element_matrix.rst  prometheus.equilibrium.mixture.rst  prometheus.equilibrium.performance.rst  prometheus.equilibrium.problem.rst  prometheus.equilibrium.rst  prometheus.equilibrium.solution.rst  prometheus.equilibrium.solver.rst  prometheus.equilibrium.species.rst  prometheus.propellants.loader.rst  prometheus.propellants.rst  prometheus.rst  prometheus.thermo_data.compiler.rst  prometheus.thermo_data.parsers.burcat.rst  prometheus.thermo_data.parsers.cea.rst  prometheus.thermo_data.parsers.janaf.rst  prometheus.thermo_data.parsers.rst  prometheus.thermo_data.parsers.shomate.rst  prometheus.thermo_data.parsers.terra.rst  prometheus.thermo_data.rst  prometheus.tools.build_all_thermo.rst  prometheus.tools.build_db.rst  prometheus.tools.build_legacy_thermo.rst  prometheus.tools.build_propellants.rst  prometheus.tools.compare_databases.rst  prometheus.tools.rst  prometheus_equilibrium.core.constants.rst  prometheus_equilibrium.core.rst  prometheus_equilibrium.equilibrium.element_matrix.rst  prometheus_equilibrium.equilibrium.mixture.rst  prometheus_equilibrium.equilibrium.performance.rst  prometheus_equilibrium.equilibrium.problem.rst  prometheus_equilibrium.equilibrium.rst  prometheus_equilibrium.equilibrium.solution.rst  prometheus_equilibrium.equilibrium.solver.rst  prometheus_equilibrium.equilibrium.species.rst  prometheus_equilibrium.propellants.loader.rst  prometheus_equilibrium.propellants.rst  prometheus_equilibrium.rst  (+14 more)
docs/scripts/: ch4_o2_worked_example.py  element_potential_trace.py
docs/thermo/: index.rst  terra_integration.rst  thermo_database_guide.rst
memory/: MEMORY.md  feedback_schema_versioning.md
papers/: PEP_Extracted.txt
prometheus/equilibrium/: mixture.py  performance.py  solver.py  species.py
prometheus/gui/: __main__.py  engine.py
prometheus/gui/dialogs/: database_search.py
prometheus/propellants/: __init__.py  loader.py
prometheus/thermo_data/: afcesic.json
prometheus/tools/: build_all_thermo.py
prometheus_equilibrium/: __init__.py
prometheus_equilibrium/core/: constants.py
prometheus_equilibrium/equilibrium/: __init__.py  _thermo_kernels.py  diagnostics.py  element_matrix.py  mixture.py  performance.py  problem.py  solution.py  solver.py  species.py
prometheus_equilibrium/gui/: __main__.py  app.py  engine.py  main_window.py
prometheus_equilibrium/optimization/: __init__.py  _eval.py  config.py  constraints.py  engine.py  gradient_engine.py  problem.py
prometheus_equilibrium/propellants/: PEPCODED.DAF  __init__.py  loader.py  propellants.toml  propellants_old.toml
prometheus_equilibrium/thermo_data/: afcesic.json  compiler.py  nasa7.json  shomate.json  terra.json
prometheus_equilibrium/tools/: build_all_thermo.py  build_db.py  build_legacy_thermo.py  build_propellants.py  compare_databases.py  run_optimizer.py
tests/: benchmark.py  benchmark_db.py  diagnose_shifting_condensed.py  test_build_propellants_tool.py  test_diagnostics.py  test_element_matrix.py  test_gui_engine_dock.py  test_gui_optimizer_page.py  test_gui_simulator_page.py  test_mixture.py  test_optimization_constraints.py  test_optimization_eval.py  test_optimization_trace.py  test_performance.py  test_problem.py  test_propellants.py  test_regression_integration.py  test_solution.py  test_solver_gmcb.py  test_solver_pep.py  test_species.py
tools/: debug_nozzle_terra_cases.py
(+39 files in other folders)
